# openreward

./: .gitignore  CLAUDE.md  LICENSE  PKG-INFO  README.md  pyproject.toml
docs/: README.md  architecture.md
docs/api/: environments.md  rollouts.md  sandboxes.md
docs/guide/: deployment.md  environment-development.md  quickstart.md  toolset-development.md
openreward/: __init__.py  _update_check.py  _version.py  cli.py  client.py  http_client.py  log_utils.py  models.py
openreward/api/_session/: __init__.py  http.py  ping.py  session.py
openreward/api/environments/: __init__.py  client.py  types.py
openreward/api/rollouts/: __init__.py  background.py  rollout.py
openreward/api/rollouts/serializers/: __init__.py  ant.py  base.py  gdm.py  models.py  oai_completions.py  oai_responses.py  (+1 more)
openreward/api/sandboxes/: __init__.py  client.py  secrets.py  types.py
openreward/environments/: __init__.py  environment.py  reconnect.py  server.py  session.py  toolset.py  types.py  utils.py
openreward/templates/: __init__.py
openreward/templates/basic/: Dockerfile  __init__.py  requirements.txt  requirements.txt.tmpl  server.py.tmpl
openreward/templates/sandbox/: Dockerfile  __init__.py  requirements.txt  sandbox_env.py  server.py
openreward/toolsets/: __init__.py  claude_code.py  codex.py  excel.py  gemini_cli.py  hermes.py  openclaw.py  pdf.py  powerpoint.py  word.py
tests/: test_environment.py  test_errors.py  test_gemini_cli_toolset.py  test_rollout_info.py  test_sanitise.py  test_session.py  test_session_toolset.py  test_tool_conversion.py  test_toolsets.py
